WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145959
[Mac] Clear current AirPlay source before setting another
https://bugs.webkit.org/show_bug.cgi?id=145959
Summary
[Mac] Clear current AirPlay source before setting another
Eric Carlson
Reported
2015-06-13 17:21:17 PDT
It is an error to set the same output context on two AVPlayers simultaneously, so always clear an active player before setting the context on another.
Attachments
Proposed patch.
(2.20 KB, patch)
2015-06-13 17:25 PDT
,
Eric Carlson
bfulgham
: review+
Details
Formatted Diff
Diff
Updated patch.
(4.31 KB, patch)
2015-07-02 12:34 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated patch.
(4.28 KB, patch)
2015-07-02 12:58 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-06-13 17:21:38 PDT
<
rdar://problem/21331156
>
Eric Carlson
Comment 2
2015-06-13 17:25:36 PDT
Created
attachment 254857
[details]
Proposed patch.
Brent Fulgham
Comment 3
2015-06-13 20:22:09 PDT
Comment on
attachment 254857
[details]
Proposed patch. r=me
Eric Carlson
Comment 4
2015-07-02 12:34:47 PDT
Created
attachment 256023
[details]
Updated patch.
WebKit Commit Bot
Comment 5
2015-07-02 12:37:40 PDT
Attachment 256023
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 6
2015-07-02 12:58:38 PDT
Created
attachment 256025
[details]
Updated patch.
Brent Fulgham
Comment 7
2015-07-02 14:15:32 PDT
Comment on
attachment 256025
[details]
Updated patch. r=me. I don't think the Windows build issue is due to this patch.
WebKit Commit Bot
Comment 8
2015-07-02 15:32:21 PDT
Comment on
attachment 256025
[details]
Updated patch. Clearing flags on attachment: 256025 Committed
r186238
: <
http://trac.webkit.org/changeset/186238
>
WebKit Commit Bot
Comment 9
2015-07-02 15:32:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug