[Mac] Clear current AirPlay source before setting another https://bugs.webkit.org/show_bug.cgi?id=145959

Reviewed by Brent Fulgham.

* Modules/mediasession/WebMediaSessionManager.cpp:
(WebCore::WebMediaSessionManager::clientStateDidChange): Don't make a client begin playing
  to the target just because it has paused.
(WebCore::WebMediaSessionManager::configurePlaybackTargetClients): Always select a client that
  requrested the picker, and never consider paused clients when choosing a client to begin
  playing to the targer. Call setShouldPlayToPlaybackTarget(true) after all of the other
  clients have been told to stop playing to the target.


Canonical link: https://commits.webkit.org/164650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186238 268f45cc-cd09-0410-ab3c-d52691b4dbfc